light desktop jar generation for testing api