@@ -10,6 +10,7 @@
   <groupId>com.github.javatlacati</groupId>
   <artifactId>inventarios-desktop-testing-api</artifactId>
   <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
   <name>inventarios-desktop-testing-api</name>
   <!-- FIXME change it to the project's website -->
@@ -17,8 +18,6 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -34,64 +33,116 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
       <version>1.10.19</version>
-      <scope>test</scope>
+      <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter</artifactId>
+      </dependency>
     <!--unit tests-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>compile</scope>
     </dependency>
+    <!--        other modules from this application-->
     <dependency>
       <groupId>com.github.javatlacati</groupId>
-      <artifactId>inventarios-desktop</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <artifactId>inventarios-entities</artifactId>
+      <version>1.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+        <groupId>com.github.javatlacati</groupId>
+        <artifactId>inventarios-desktop</artifactId>
+        <classifier>app-to-import</classifier>
+        <version>1.0</version>
+        <scope>compile</scope>
     </dependency>
   </dependencies>
-
+  
   <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
-        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.7.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+<!--                  <release>12</release>-->
+                  <annotationProcessorPaths>
+                      <path>
+                          <groupId>org.projectlombok</groupId>
+                          <artifactId>lombok</artifactId>
+                          <version>1.18.8</version>
+                      </path>
+                  </annotationProcessorPaths>
+              </configuration>
+<!--              <dependencies>-->
+<!--                  <dependency>-->
+<!--                      <groupId>com.github.javatlacati</groupId>-->
+<!--                      <artifactId>inventarios-entities</artifactId>-->
+<!--                      <version>1.0</version>-->
+<!--                  </dependency>-->
+<!--                  <dependency>-->
+<!--                      <groupId>com.github.javatlacati</groupId>-->
+<!--                      <artifactId>inventarios-desktop</artifactId>-->
+<!--                      <version>1.0</version>-->
+<!--                  </dependency>-->
+<!--                  <dependency>-->
+<!--                      <groupId>org.ow2.asm</groupId>-->
+<!--                      <artifactId>asm</artifactId>-->
+<!--                      <version>6.2</version> &lt;!&ndash; Use newer version of ASM &ndash;&gt;-->
+<!--                  </dependency>-->
+<!--              </dependencies>-->
+          </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>3.0.0-M3</version>
+              <dependencies>
+                  <dependency>
+                      <groupId>junit</groupId>
+                      <artifactId>junit</artifactId>
+                      <version>4.12</version>
+                  </dependency>
+              </dependencies>
+              <configuration>
+                  <trimStackTrace>false</trimStackTrace>
+                  <forkCount>0</forkCount>
+                  <reuseForks>false</reuseForks>
+                  <printSummary>true</printSummary>
+                  <argLine>
+                      --illegal-access=permit
+                  </argLine>
+                  <!--                    <useSystemClassLoader>false</useSystemClassLoader>-->
+<!--                  <excludes>-->
+<!--                      <exclude>**/**.GUITest.java</exclude>-->
+<!--                  </excludes>-->
+              </configuration>
+          </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-failsafe-plugin</artifactId>
+              <version>2.22.0</version>
+              <configuration>
+                  <argLine>
+                      --illegal-access=permit
+                  </argLine>
+              </configuration>
+              <executions>
+                  <execution>
+                      <id>integration-test</id>
+                      <goals>
+                          <goal>integration-test</goal>
+                      </goals>
+                  </execution>
+                  <execution>
+                      <id>verify</id>
+                      <goals>
+                          <goal>verify</goal>
+                      </goals>
+                  </execution>
+              </executions>
+          </plugin>
       </plugins>
-    </pluginManagement>
   </build>
 </project>
